// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish Test File via Babel xx: cjs 1`] = `
"/*! jsx v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var React = require('react');
var reactIntl = require('react-intl');
var Header = require('components/Header');

function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e[\\"default\\"] : e; }

var React__default = /*#__PURE__*/_interopDefaultLegacy(React);
var Header__default = /*#__PURE__*/_interopDefaultLegacy(Header);

/* eslint-disable import/no-unresolved */
function MyPage() {
  return <>
      <Header__default>Title</Header__default>
      <button type=\\"submit\\">
        <reactIntl.FormattedMessage id=\\"press-button\\" />
      </button>
    </>;
}

exports.MyPage = MyPage;
//# sourceMappingURL=index.cjs.js.map
"
`;

exports[`Publish Test File via Babel xx: esm 1`] = `
"/*! jsx v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
import React from 'react';
import { FormattedMessage } from 'react-intl';
import Header from 'components/Header';

/* eslint-disable import/no-unresolved */
function MyPage() {
  return <>
      <Header>Title</Header>
      <button type=\\"submit\\">
        <FormattedMessage id=\\"press-button\\" />
      </button>
    </>;
}

export { MyPage };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`Publish Test File via Babel xx: umd 1`] = `
"/*! jsx v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports, require('react'), require('react-intl'), require('components/Header')) :
  typeof define === 'function' && define.amd ? define(['exports', 'react', 'react-intl', 'components/Header'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.jsx = {}, global.React, global.reactIntl, global.Header));
})(this, (function (exports, React, reactIntl, Header) { 'use strict';

  function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e[\\"default\\"] : e; }

  var React__default = /*#__PURE__*/_interopDefaultLegacy(React);
  var Header__default = /*#__PURE__*/_interopDefaultLegacy(Header);

  /* eslint-disable import/no-unresolved */
  function MyPage() {
    return <>
        <Header__default>Title</Header__default>
        <button type=\\"submit\\">
          <reactIntl.FormattedMessage id=\\"press-button\\" />
        </button>
      </>;
  }

  exports.MyPage = MyPage;

  Object.defineProperty(exports, '__esModule', { value: true });

}));
//# sourceMappingURL=index.umd.js.map
"
`;
